fix the directory

--- a/jedis-spring-boot/pom.xml
+++ b/jedis-spring-boot/pom.xml
@@ -3,7 +3,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <groupId>fun.example.spring.boot</groupId>
+    <artifactId>jedis-spring-boot</artifactId>
     <modelVersion>4.0.0</modelVersion>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -11,10 +15,6 @@
         <version>2.0.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
-    <groupId>fun.example.spring.boot</groupId>
-    <artifactId>jedis-spring-boot</artifactId>
-    <packaging>pom</packaging>
 
     <name>jedis-spring-boot</name>
     <modules>
