--- a/jedis-spring-boot/jedis-spring-boot-example/pom.xml
+++ b/jedis-spring-boot/jedis-spring-boot-example/pom.xml
@@ -8,9 +8,9 @@
         <groupId>fun.example.spring.boot</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>jedis-spring-boot-example</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <name>jedis-spring-boot-example</name>
 
