--- a/jedis-spring-boot/pom.xml
+++ b/jedis-spring-boot/pom.xml
@@ -8,18 +8,33 @@
     <modelVersion>4.0.0</modelVersion>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-
     <name>jedis-spring-boot</name>
+
+    <properties>
+        <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
+    </properties>
+
     <modules>
         <module>jedis-spring-boot-autoconfigure</module>
         <module>jedis-spring-boot-starter</module>
         <module>jedis-spring-boot-example</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+    </dependencies>
 </project>
